Fix header not appearing on mobile devices

--- a/assets/css/template-styles.css
+++ b/assets/css/template-styles.css
@@ -243,6 +243,7 @@ button {
 
 /* Forms */
 .themer-wrapper {
+    margin-bottom: 1rem;
     text-align: center;
 }
 label {
@@ -382,10 +383,6 @@ caption {
     font-size: 0.85rem;
     margin-top: 4rem;
     text-align: center;
-}
-
-.real-footer div {
-    margin-bottom: 1rem;
 }
 
 /* Patterns navigation */
@@ -1028,7 +1025,7 @@ h1 svg {
     body a {
       hyphens: auto;
     }
-    header {
+    header.intro-and-nav {
         position: static;
         width: auto;
         height: auto;
